Solved the avatar issue

--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -23,7 +23,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="#">Home</a></li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 							<li class="breadcrumb-item active">About us</li>
 						</ol>
 					</div>
@@ -104,7 +104,8 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Easy Trading</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>Bitfonix offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research. 
+								You will be given signaling of point of entry for every single trade in CFD over the counter trading spot market.</p>
 						</div>
 					</div>
 				</div>
