removed pre-loader

--- a/users/templates/registration/email_create.html
+++ b/users/templates/registration/email_create.html
@@ -5,7 +5,7 @@ We've received a request to create an account for this email.
 
 To activate your account, please navigate to:
 
-{{ protocol }}://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
+http://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
 
 if clicking the link above doesn't work, please copy the URL in a new browser window instead.
 
