working on general static pages

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -14,10 +14,10 @@
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
 									<h2>Secure & easy way to <br> buy & sell bitcoin</h2>
-									<p class="text-capitalize">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+									<p class="text-capitalize">We put the power in your hands, to buy, sell and trade digital currency. We are Bitfonix, consistently rated the best and most secure cryptocurrency exchange.</p>
 									<div class="home-single-slide-button">
 										<a href="#" class="btn-style btn-filled">Learn More</a>
-										<a href="#" class="btn-style btn-border">Bitcoin Price</a>
+										<a href="{% url 'my-auth:create' %}" class="btn-style btn-border">Get started</a>
 									</div>
 								</div>
 							</div>
@@ -33,8 +33,8 @@
 						<div class="row">
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
-									<h2>bitcoin & ethereum transper you can trust </h2>
-									<p class="text-capitalize">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+									<h2>bitcoin & ethereum transfer you can trust </h2>
+									<p class="text-capitalize">We give you the power to hit the ground running, no matter your experience level. Make easy deposits and withdrawals, measure your portfolio's performance and keep track of all of your digital assets in one convenient place.</p>
 									<div class="home-single-slide-button">
 										<a href="#" class="btn-style btn-border">Get quote</a>
 										<a href="#" class="btn-style btn-filled">Read More</a>
@@ -54,9 +54,9 @@
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
 									<h2>Invest & double your desire bitcoin</h2>
-									<p class="text-capitalize">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+									<p class="text-capitalize">New to cryptocurrency? No problem. Digital assets may seem confusing, but we're here to help. While the concept is simple, we know that aspects of cryptocurrency can seem a bit complex.</p>
 									<div class="home-single-slide-button">
-										<a href="#" class="btn-style btn-filled">Contact Us</a>
+										<a href="{% url 'contact' %}" class="btn-style btn-filled">Contact Us</a>
 										<a href="#" class="btn-style btn-border">View More</a>
 									</div>
 								</div>
@@ -1167,12 +1167,12 @@
 				<div class="col-lg-8 col-md-8 col-sm-12 col-12 mb-lg-0 mb-md-4 mb-sm-4 mb-4">
 					<div class="calltoaction-two-wrap">
 						<h4>Need More Service?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do<br>incididunt ut labore et dolore magna aliqua.</p>
+						<p>If you have questions, comments or concerns, our local staff is on-hand to answer all your needs.<br>Contact us by email</p>
 					</div>
 				</div>
 				<!-- end col -->
 				<div class="col-lg-4 col-md-4 col-sm-12 col-12 mt-lg-4 mt-md-4 text-lg-right text-md-right text-sm-left text-left">
-					<a href="#" class="btn-style btn-border btn-border-3">Contact Us</a>
+					<a href="{% url 'contact' %}" class="btn-style btn-border btn-border-3">Contact Us</a>
 				</div>
 				<!-- end col -->
 			</div>
