--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 {% load static %}
 {% include "messages.html" %}
 <!DOCTYPE html>
@@ -8,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- <link rel="icon" href="http://html-templates.multipurposethemes.com/bootstrap-4/admin/unique/02/unique-dark-admin/images/favicon.ico"> -->
     <title>Bitfonix Admin - Dashboard</title>
 
     {% block style %}
     <link rel="stylesheet" type="text/css" href="{% static 'ionicons/css/ionicons.css' %}">
     {% endblock %}
 
+    {% render_bundle 'main' 'css' %}
 
     
 	<!-- Bootstrap 4.0-->
@@ -31,14 +32,6 @@
 	
 	<!-- Unique_admin skins -->
     <link rel="stylesheet" href="{% static 'dashboard/css/skins/_all-skins.css' %}">
-    <script src="https://use.fontawesome.com/f6a1c36cc9.js"></script>
-
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
 
      
   </head>
@@ -332,9 +325,9 @@
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/amcharts.js' %}" type="text/javascript"></script>
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/gauge.js' %}" type="text/javascript"></script>
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/serial.js' %}" type="text/javascript"></script>
-	<script src="{% static 'dashboard/www.amcharts.com/lib/3/amstock.js' %}" type="text/javascript"></script>
+	<!-- <script src="{% static 'dashboard/www.amcharts.com/lib/3/amstock.js' %}" type="text/javascript"></script> -->
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/pie.js' %}" type="text/javascript"></script>
-	<script src="{% static 'dashboard/www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js' %}"></script>
+	<!-- <script src="{% static 'dashboard/www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js' %}"></script> -->
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/plugins/animate/animate.min.js' %}" type="text/javascript"></script>
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/plugins/export/export.min.js' %}" type="text/javascript"></script>
 	<script src="{% static 'dashboard/www.amcharts.com/lib/3/themes/patterns.js' %}" type="text/javascript"></script>
