--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load render_bundle from webpack_loader %}
 {% load static %}
 {% block content %}
   
@@ -50,7 +51,8 @@
 				<div class="box">
 					<div class="box-body">
 						<div class="chart">
-							<div id="chartdiv1" style="height: 515px;"></div>
+							<div id="react-app" style="height: 515px;"></div>
+							{% render_bundle 'main' 'js' %}
 						</div>
 					</div>
 				</div>
