fixed the candlestick

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -692,61 +692,23 @@
 			<div class="row">
 				<div class="col-lg-7 col-md-7 col-12 pr-lg-5 pr-md-5 pr-sm-0 pr-0 mb-lg-0 mb-md-4 mb-sm-4 mb-4">
 					<div class="table-responsive">
-						<table class="bitland-table table table-striped table-hover">
-							<thead>
-								<tr>
-									<th scope="col">Cryptocurrency</th>
-									<th scope="col">Price</th>
-									<th scope="col">24% Change</th>
-									<th scope="col">Supppy</th>
-									<th scope="col">24% Volume</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-baht"></i> Bitcoin</th>
-									<td>85.78$</td>
-									<td>34.29%</td>
-									<td>427BTC</td>
-									<td>34,89</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-dollar"></i> Bitfonix</th>
-									<td>97.45$</td>
-									<td>45.20%</td>
-									<td>492BTC</td>
-									<td>67.82</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="fas fa-shekel-sign"></i> Degitalcash</th>
-									<td>45.89$</td>
-									<td>23.96%</td>
-									<td>635BTC</td>
-									<td>23.57</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-euro-true"></i> Ethereum</th>
-									<td>78.35$</td>
-									<td>84.78%</td>
-									<td>395BTC</td>
-									<td>67.10</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-dollar-plus"></i> Stellar</th>
-									<td>45.89$</td>
-									<td>98.29%</td>
-									<td>829BTC</td>
-									<td>89.34</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-renminbi-true"></i> Ripple</th>
-									<td>76.28$</td>
-									<td>89.45%</td>
-									<td>623BTC</td>
-									<td>89.44</td>
-								</tr>
-							</tbody>
-						</table>
+						<!-- TradingView Widget BEGIN -->
+						<div class="tradingview-widget-container">
+							<div class="tradingview-widget-container__widget"></div>
+							<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/cryptocurrencies/prices-all/" rel="noopener" target="_blank"><span class="blue-text">Cryptocurrency Markets</span></a> by TradingView</div>
+							<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
+							{
+							"width": "600",
+							"height": "500",
+							"defaultColumn": "overview",
+							"screener_type": "crypto_mkt",
+							"displayCurrency": "USD",
+							"colorTheme": "light",
+							"locale": "en"
+						}
+							</script>
+						</div>
+  <!-- TradingView Widget END -->
 					</div>
 				</div>
 				<!-- end col -->
