--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -50,10 +50,38 @@
 				</div>					
 				<div class="box">
 					<div class="box-body">
-						<div class="chart">
-							<div id="react-app" style="height: 515px;"></div>
-							{% render_bundle 'main' 'js' %}
-						</div>
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+	<div id="tradingview_abb78"></div>
+	<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTCUSD/?exchange=COINBASE" rel="noopener" target="_blank"><span class="blue-text">BTCUSD Chart</span></a> by TradingView</div>
+	<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+	<script type="text/javascript">
+	new TradingView.widget(
+	{
+	"width": 600,
+	"height": 610,
+	"symbol": "COINBASE:BTCUSD",
+	"timezone": "Etc/UTC",
+	"theme": "dark",
+	"style": "1",
+	"locale": "en",
+	"toolbar_bg": "#f1f3f6",
+	"enable_publishing": false,
+	"withdateranges": true,
+	"range": "all",
+	"allow_symbol_change": true,
+	"studies": [
+	  "BB@tv-basicstudies"
+	],
+	"container_id": "tradingview_abb78"
+  }
+	);
+	</script>
+  </div>
+  <!-- TradingView Widget END -->
+							<!-- <div id="react-app" style="height: 515px;"></div>
+							{% render_bundle 'main' 'js' %} -->
+				
 					</div>
 				</div>
 				<div class="box">
